Fix remove tags checkbox spacing to be less huge.

--- a/src/main/resources/wui/layout.css
+++ b/src/main/resources/wui/layout.css
@@ -260,6 +260,10 @@ input, button {
   height: 100%;
 }
 
+.removetags input[type="checkbox"] {
+  min-height: 1.5em;
+}
+
 .addtagbar_wrapper {
   display: flex;
   justify-content: center;
